--- a/toboggan/app/views/trips/index.html.erb
+++ b/toboggan/app/views/trips/index.html.erb
@@ -1,11 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-  <head>
-    <title>JQVMap - World Map</title>
+<head>
+	<title>jQuery UI Slider - Range slider</title>
+	<title>JQVMap - World Map</title>
+</head>
+<body>
+	<header>Where?</header>
+	<!-- javascript for slider bar below is in trips.js -->
+	<p>
+		<label for="amount">Price Range:</label>
+		<input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+	</p>
+	<div id="slider-range"></div>
+	<!-- end of code for slider bar -->
+	<div id="vmap" style="width: 100%; height: 700px;"></div>
+</body>
 
-    
-  </head>
-  <body>
-    <div id="vmap" style="width: 600px; height: 400px;"></div>
-  </body>
-</html>
