minor color and format adjustments

--- a/toboggan/app/views/layouts/application.html.erb
+++ b/toboggan/app/views/layouts/application.html.erb
@@ -5,6 +5,9 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <link rel="stylesheet" media="screen" href="app.css">
+  <link rel="stylesheet" media="screen" href="layout.css">
+  <link href='http://fonts.googleapis.com/css?family=Syncopate|Oxygen' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
