--- a/toboggan/app/views/trips/index.html.erb
+++ b/toboggan/app/views/trips/index.html.erb
@@ -3,8 +3,9 @@
 	<title>JQVMap - World Map</title>
 </head>
 <body>
-	<header>Where?</header>
+	<header><h2>Dodo Flight</h2></header>
 	<!-- javascript for slider bar below is in trips.js -->
+	<div id="mapslider" >	
 	<p>
 		<label for="amount">Price Range:</label>
 		<input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
@@ -12,5 +13,6 @@
 	<div id="slider-range"></div>
 	<!-- end of code for slider bar -->
 	<div id="vmap" style="width: 100%; height: 700px;"></div>
+	</div>
 </body>
 
