--- a/toboggan/app/views/flights/new.html.erb
+++ b/toboggan/app/views/flights/new.html.erb
@@ -1,7 +1,9 @@
 <h1>Dodo flights</h1>
 <%= form_for @flight, url: {action: "create"}, html: {class: "create_flight"} do |f| %>
-  <%= f.text_field :beginning_airport %>
-  <%= f.text_field :ending_airport %>
-  <%= select_date Date.today, prefix: :search_end %>
-  <%= f.submit "Create" %>
+  <%= f.text_field :beginning_airport %><br>
+  <%= f.text_field :ending_airport %><br>
+  <%= f.date_field :search_end %><br>
+  <%= f.label :price %>
+  <%= f.number_field :price %>
+  <%= f.submit %>
 <% end %>
