Added integration for creating a new price alert.

--- a/toboggan/app/views/flights/new.html.erb
+++ b/toboggan/app/views/flights/new.html.erb
@@ -5,5 +5,5 @@
   <%= f.date_field :search_end %><br>
   <%= f.label :price %>
   <%= f.number_field :price %>
-  <%= f.submit %>
+  <%= f.submit :id => "submit" %>
 <% end %>
