--- a/toboggan/app/views/flights/show.html.erb
+++ b/toboggan/app/views/flights/show.html.erb
@@ -1,5 +1,7 @@
 <h1>Flight: <%= @flight.id %></h1>
 
+<div class="flash"><%= flash[:notice] %></div>
+
 <div id="flight"> 
 	<div class="flight_origin">
 		<%= @flight.beginning_airport %>
@@ -9,5 +11,9 @@
 		<%= @flight.ending_airport %>
 	</div>
 
+	<br>
+	<%= link_to 'Edit this trip', edit_flight_path(@flight) %>	
+
+	<%= link_to 'Create new trip', root_path %>
 
 </div>
