--- a/toboggan/app/views/layouts/application.html.erb
+++ b/toboggan/app/views/layouts/application.html.erb
@@ -2,11 +2,12 @@
 <html>
 <head>
   <title>Toboggan</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
-  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="stylesheet" media="screen" href="app.css">
+  <link rel="stylesheet" media="screen" href="layout.css">
+  <link href='http://fonts.googleapis.com/css?family=Syncopate|Oxygen' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
