--- a/toboggan/app/views/flights/new.html.erb
+++ b/toboggan/app/views/flights/new.html.erb
@@ -8,3 +8,14 @@
   <%= f.number_field :price %>
   <%= f.submit :id => "submit" %>
 <% end %>
+
+	<!-- javascript for slider bar below is in trips.js -->
+	<div id="mapslider" >	
+	<p>
+		<label for="amount">Price Range:</label>
+		<input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+	</p>
+	<div id="slider-range"></div>
+	<!-- end of code for slider bar -->
+	<div id="vmap" style="width: 90%; height: 700px;"></div>
+	</div>
