--- a/toboggan/app/assets/stylesheets/application.css
+++ b/toboggan/app/assets/stylesheets/application.css
@@ -10,11 +10,13 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
- *= require jquery.ui.all
+ *= require jquery-ui
  *= require jqvmap
  *= require_tree .
  *= require_self
+
  */
+
  nav {
  	width: 100%;
  	height: 50px;
