updated form to include users phone number, need to test routes.

--- a/toboggan/app/assets/stylesheets/flights.css.scss
+++ b/toboggan/app/assets/stylesheets/flights.css.scss
@@ -5,12 +5,11 @@
 
 #create_flight {
 	position: absolute;
-	right: 50px;
+	right: 150px;
 	top: 100px;
 }
 
 #vmap {
-
 	top: 0;
 	left: 50px;
 	display: block;
@@ -18,8 +17,16 @@
 	height: 400px;
 }
 
+#create_flight input {
+	width: 150px;
+	text-align: left;
+	height: 20px;
+	line-height: 25px;
+}
+
 
 #new_flight {
+	font-family: 'Raleway', sans-serif;
 	display: block;
 	width: 1000px;
 	height: 450px;
@@ -29,4 +36,12 @@
 	margin: 0 auto;
 	border: 1px solid #E0E0E0;
 	text-align: center;
+	padding-top: 30px;
+	border-radius: 5px;
 }
+
+#new_flight h1 {
+	font-size: 24px;
+}
+
+
