--- a/toboggan/app/views/flights/new.html.erb
+++ b/toboggan/app/views/flights/new.html.erb
@@ -1,16 +1,19 @@
 <%= flash[:notice] %>
 
 <div id="new_flight">
-	<h1>Fill in the form below to find a flight</h1>
+	<h1>Complete the form and be notified if a flight meets your criteria</h1>
 	<%= form_for @flight, url: {action: "create"}, html: {id: "create_flight"} do |f| %>
-	  <%= f.text_field :beginning_airport, placeholder: "Origin" %><br>
-	  <%= f.text_field :ending_airport, placeholder: "Destination" %><br>
-	  When the search should stop: 
-	  <%= f.date_field :search_end %><br>
-	  <%= f.label :price %>
-	  <%= f.number_field :price %>
-	  <%= f.submit :id => "submit" %>
+	  <%= f.text_field :beginning_airport, placeholder: "Origin airport" %><br>
+	  <%= f.text_field :ending_airport, placeholder: "Destination (click map)" %><br>
+	  <%= f.number_field :price, placeholder: "Price cap" %><br>
+	  <% unless session[:user_id] %>
+	  	<%= f.fields_for :user do |ff| %>
+	  		<%= ff.text_field :phone_number, placeholder: "Mobile number" %><br>
+	  	<% end %>
+	  <% end %><br>
+	  <%= f.submit :id => "submit", :value => "Off you go..." %>
 	<% end %>
-
 	<div id="vmap" style="width: 50%; height: 400px;"></div>
 </div>
+
+<div id="demo"></div>
