adding box styling

--- a/toboggan/app/views/flights/new.html.erb
+++ b/toboggan/app/views/flights/new.html.erb
@@ -11,7 +11,7 @@
 	  		<%= ff.text_field :phone_number, placeholder: "Mobile number" %><br>
 	  	<% end %>
 	  <% end %><br>
-	  <%= f.submit :id => "submit", :value => "Off you go..." %>
+	  <%= f.submit :id => "submit", :value => "Off you go" %>
 	<% end %>
 	<div id="vmap" style="width: 50%; height: 400px;"></div>
 </div>
