--- a/toboggan/app/assets/stylesheets/user.css.scss
+++ b/toboggan/app/assets/stylesheets/user.css.scss
@@ -6,12 +6,28 @@ h2 {
 	font-family: 'Raleway', sans-serif;
 }
 
+input {
+    border: 2px solid white; 
+    -webkit-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    -moz-box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    box-shadow: 
+      inset 0 0 8px  rgba(0,0,0,0.1),
+            0 0 16px rgba(0,0,0,0.1); 
+    padding: 5px;
+    background: rgba(255,255,255,0.5);
+    margin: 0 0 10px 0;
+}
+
 
 #forms {
 	font-family: 'Raleway', sans-serif;
 	display: block;
 	width: 300px;
-	height: 450px;
+	height: 250px;
 	margin: 0 auto;
 	position: relative;
 	top: 100px;
@@ -22,3 +38,4 @@ h2 {
 	border-radius: 5px;
 	z-index:-1;
 }
+
