--- a/toboggan/app/views/devise/passwords/edit.html.erb
+++ b/toboggan/app/views/devise/passwords/edit.html.erb
@@ -1,5 +1,6 @@
 <h2>Change your password</h2>
 
+<div id="forms">
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
   <%= f.hidden_field :reset_password_token %>
@@ -14,3 +15,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+</div>
