--- a/toboggan/app/views/devise/passwords/new.html.erb
+++ b/toboggan/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,6 @@
 <h2>Forgot your password?</h2>
 
+<div id="forms">
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
@@ -10,3 +11,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
