--- a/toboggan/app/views/devise/registrations/new.html.erb
+++ b/toboggan/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,14 @@
 <h2>Sign up</h2>
 
+<div id="forms">
+
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email, autofocus: true %></div>
+
+
 
   <div><%= f.label :password %><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
@@ -16,3 +20,4 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
