--- a/toboggan/app/views/devise/registrations/new.html.erb
+++ b/toboggan/app/views/devise/registrations/new.html.erb
@@ -6,6 +6,9 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email, autofocus: true %></div>
 
+  <div><%= f.label :phone_number %><br />
+    <%= f.phone_field :phone_number, autocomplete: "off" %></div>
+
   <div><%= f.label :password %><br />
     <%= f.password_field :password, autocomplete: "off" %></div>
 
