added fields to user forms

--- a/toboggan/app/assets/stylesheets/application.css
+++ b/toboggan/app/assets/stylesheets/application.css
@@ -46,6 +46,10 @@ body a, a:hover, a:visited {
  	font-family: 'Raleway', sans-serif;
  }
 
+ #logo a {
+ 	text-decoration: none;
+ }
+
  #nav_options {
  	position: fixed;
  	right: 0;
