--- a/toboggan/app/views/layouts/_navigation.html.erb
+++ b/toboggan/app/views/layouts/_navigation.html.erb
@@ -7,6 +7,7 @@
 
 		<li class="nav_items">
 			<% if session[:user_id] %>
+				<%= link_to 'log out', destroy_user_session_path %>
 				account
 			<% else %>
 				<%= link_to 'log in', new_user_session_path %>
