Updated Views to reflect use of Devise

--- a/toboggan/app/assets/stylesheets/application.css
+++ b/toboggan/app/assets/stylesheets/application.css
@@ -67,11 +67,12 @@ body a, a:hover, a:visited {
 	text-decoration: none;
 }
 
+#authentication {
+  padding: 60px;
+}
 
 
-
- /* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
+ /* http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126
    License: none (public domain)
 */
 
@@ -84,9 +85,9 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
+article, aside, canvas, details, embed,
+fgre, figcaption, footer, header, hgroup,
+menu nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
@@ -96,7 +97,7 @@ time, mark, audio, video {
 	vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
