--- a/toboggan/app/views/layouts/_navigation.html.erb
+++ b/toboggan/app/views/layouts/_navigation.html.erb
@@ -5,13 +5,15 @@
 			<%= link_to 'create alert', root_path %>
 		</li>
 
-		<li class="nav_items">
-			<% if session[:user_id] %>
-				account
+
+			<% if user_signed_in? %>
+				<li>Signed in as <%= current_user.email %></li>
+				<li><%= link_to "Sign Out", destroy_user_session_path %></li>
 			<% else %>
-				<%= link_to 'log in', new_user_session_path %>
+				<li><%= link_to "Sign Up", new_user_registration_path %></li>
+				<li><%= link_to "Sign In", new_user_session_path %></li>
 			<% end %>
-		</li>
+
 
 	</ul>
 </nav>
