Pull from upstream, updating forked repository

--- a/toboggan/app/views/flights/new.html.erb
+++ b/toboggan/app/views/flights/new.html.erb
@@ -6,7 +6,7 @@
 	  <%= f.text_field :beginning_airport, placeholder: "Origin airport" %><br>
 	  <%= f.text_field :ending_airport, placeholder: "Destination (click map)" %><br>
 	  <%= f.number_field :price, placeholder: "Price cap" %><br>
-	  <%= f.text_field :phone_number, placeholder: "Mobile number" %><br>
+	  <%#= f.text_field :phone_number, placeholder: "Mobile number" %><br>
 	  <%= f.submit :id => "submit", :value => "Set alert" %>
 	<% end %>
 	<div id="vmap" style="width: 50%; height: 400px;"></div>
