--- a/toboggan/app/assets/stylesheets/user.css.scss
+++ b/toboggan/app/assets/stylesheets/user.css.scss
@@ -23,11 +23,11 @@ input {
 }
 
 
-#forms {
+#user {
 	font-family: 'Raleway', sans-serif;
 	display: block;
-	width: 300px;
-	height: 400px;
+	width: 1000px;
+	height: 450px;
 	margin: 0 auto;
 	position: relative;
 	top: 100px;
