--- a/toboggan/app/views/layouts/_navigation.html.erb
+++ b/toboggan/app/views/layouts/_navigation.html.erb
@@ -6,13 +6,13 @@
 		</li>
 
 		<li class="nav_items">
-			<% if session[:user_id] %>
-				<%= link_to 'log out', destroy_user_session_path %>
-				account
+			<% if current_user %>
+				<% p "sdfsdf" %>
+				<%= link_to 'my page', user_path(current_user)%>
 			<% else %>
 				<%= link_to 'log in', new_user_session_path %>
 			<% end %>
 		</li>
-
 	</ul>
 </nav>
+ <%#= session.inspect %>
