--- a/toboggan/app/views/layouts/_navigation.html.erb
+++ b/toboggan/app/views/layouts/_navigation.html.erb
@@ -2,17 +2,21 @@
 	<div id="logo">dodo flights</div>
 	<ul id="nav_options" class="nav">
 		<li class="nav_items">
-			<%= link_to 'create alert', root_path %>
+			<%= link_to 'Create Alert', root_path %>
 		</li>
 
+		<% if current_user %>
 		<li class="nav_items">
-			<% if session[:user_id] %>
-				<%= link_to 'log out', destroy_user_session_path %>
-				account
-			<% else %>
-				<%= link_to 'log in', new_user_session_path %>
-			<% end %>
+				<%= link_to 'Sign Out', destroy_user_session_path %>
 		</li>
+			<% else %>
+		<li class="nav_items">
+			<%= link_to 'Sign In', new_user_session_path %>
+		</li>
+		<li class="nav_items">
+			<%#= link_to 'Sign Up', new_user_registration %>
+		</li>
+		<% end %>
 
 	</ul>
 </nav>
