fixed devise problem -missing require statement

--- a/toboggan/app/assets/stylesheets/user.css.scss
+++ b/toboggan/app/assets/stylesheets/user.css.scss
@@ -23,9 +23,8 @@ input {
 }
 
 
-#user {
+form {
 	font-family: 'Raleway', sans-serif;
-	display: block;
 	width: 1000px;
 	height: 450px;
 	margin: 0 auto;
@@ -36,6 +35,6 @@ input {
 	text-align: center;
 	padding-top: 30px;
 	border-radius: 5px;
-	z-index:-1;
+
 }
 
