--- a/toboggan/app/views/layouts/_navigation.html.erb
+++ b/toboggan/app/views/layouts/_navigation.html.erb
@@ -8,6 +8,8 @@
 		<li class="nav_items">
 			<% if user_signed_in? %>
 				<%= link_to 'logout', destroy_user_session_url, method: :delete %></li> 
+		<li class="nav_items">		
+				<%= link_to 'my page', flights_path %></li> 
 			<% else %>
 				<%= link_to 'log in', new_user_session_path %>
 			<% end %>
