--- a/toboggan/app/views/layouts/_navigation.html.erb
+++ b/toboggan/app/views/layouts/_navigation.html.erb
@@ -1,22 +1,39 @@
 <nav>
 	<div id="logo">dodo flights</div>
-	<ul id="nav_options" class="nav">
-		<li class="nav_items">
-			<%= link_to 'Create Alert', root_path %>
+		<ul id="nav_options" class="nav">
+			<li class="nav_items">
+				<%= link_to 'Create Alert', root_path %>
+			</li>
+			<% if current_user %>
+			<li class="nav_items">
+					<%= link_to 'Sign Out', destroy_user_session_path %>
+			</li>
+					<% else %>
+			<li class="nav_items">
+				<%= link_to 'Sign In', new_user_session_path %>
+			</li>
+			<li class="nav_items">
+				<%#= link_to 'Sign Up', new_user_registration %>
+			</li>
+			<% end %>
+		</ul>
+	</div>
+</nav>
+
+
+<!-- <li class="nav_items">
+			<%#= link_to 'Create Alert', root_path %>
 		</li>
 
 		<%# if current_user %>
 		<li class="nav_items">
-			<%= link_to "Sign out", destroy_user_session_path, :method => :destroy %>
+			<%#= link_to "Sign out", destroy_user_session_path, :method => :destroy %>
 		</li>
 			<%# else %>
 		<li class="nav_items">
-			<%= link_to 'Sign In', new_user_session_path %>
+			<%#= link_to 'Sign In', new_user_session_path %>
 		</li>
 		<li class="nav_items">
 			<%#= link_to 'Sign Up', new_users_registration %>
 		</li>
-		<%# end %>
-
-	</ul>
-</nav>
+		<%# end %> -->
