--- a/toboggan/app/assets/stylesheets/user.css.scss
+++ b/toboggan/app/assets/stylesheets/user.css.scss
@@ -22,6 +22,10 @@ input {
     margin: 0 0 10px 0;
 }
 
+input#submit { 
+	display: inline-block; height: 35px; 
+	color: #222222;
+}
 
 #forms {
 	font-family: 'Raleway', sans-serif;
