--- a/toboggan/app/views/layouts/application.html.erb
+++ b/toboggan/app/views/layouts/application.html.erb
@@ -8,6 +8,8 @@
   <%= csrf_meta_tags %>
   <link href='http://fonts.googleapis.com/css?family=Raleway:200' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Syncopate|Oxygen' rel='stylesheet' type='text/css'>
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
   <!-- devise -->
 </head>
 <body>
