edits to personal page and formats

--- a/toboggan/app/views/flights/index.html.erb
+++ b/toboggan/app/views/flights/index.html.erb
@@ -1,1 +1,7 @@
-Dodo flights
+<div id="page">
+dodo flights personal travel page
+
+<% @flights.each do |f|  %><br>
+<%= f.ending_airport %>
+<% end %>
+</div>
