--- a/toboggan/app/assets/stylesheets/user.css.scss
+++ b/toboggan/app/assets/stylesheets/user.css.scss
@@ -27,6 +27,21 @@ input#submit {
 	color: #222222;
 }
 
+#page {
+	font-family: 'Raleway', sans-serif;
+	display: block;
+	width: 1000px;
+	height: 450px;
+	margin: 0 auto;
+	position: relative;
+	top: 100px;
+	margin: 0 auto;
+	border: 1px solid #E0E0E0;
+	text-align: center;
+	padding-top: 30px;
+	border-radius: 5px;
+}
+
 #forms {
 	font-family: 'Raleway', sans-serif;
 	display: block;
