formats and edits for user page

--- a/toboggan/app/assets/stylesheets/flights.css.scss
+++ b/toboggan/app/assets/stylesheets/flights.css.scss
@@ -46,4 +46,16 @@
 }
 
 
-
+#flight {
+	font-family: 'Raleway', sans-serif;
+	display: block;
+	margin: 0 auto;
+	width: 90%;
+	position: absolute, center;
+	top: 100px;
+	margin: 0 auto;
+	border: 1px solid #E0E0E0;
+	text-align: center;
+	padding-top: 30px;
+	border-radius: 5px;
+}
