--- a/toboggan/app/views/flights/index.html.erb
+++ b/toboggan/app/views/flights/index.html.erb
@@ -1,7 +1,7 @@
-<div id="page">
+<!-- <div id="page">
 dodo flights personal travel page
 
-<% @flights.each do |f|  %><br>
-<%= f.ending_airport %>
-<% end %>
-</div>
+<%# @flights.each do |f|  %><br>
+<%#= f.ending_airport %>
+<%# end %>
+</div> -->
