--- a/toboggan/app/views/flights/show.html.erb
+++ b/toboggan/app/views/flights/show.html.erb
@@ -1,19 +1,19 @@
-t<h1>Flight: <%= @flight.id %></h1>
-
-<div class="flash"><%= flash[:notice] %></div>
-
+<div id="page">
 <div id="flight"> 
+<h1>Flight: <%= @flight.id %></h1>
+<div class="flash"><%= flash[:notice] %></div>
 	<div class="flight_origin">
 		<%= @flight.beginning_airport %>
 	</div>
-
+	to
 	<div class="flight_destination">
 		<%= @flight.ending_airport %>
 	</div>
-
 	<br>
 	<%= link_to 'Edit this trip', edit_flight_path(@flight) %>	
 
-	<%= link_to 'Create new trip', root_path %>
+	<%= link_to 'Create new trip', root_path %><br><br> -
+</div>
 
+</div>
 </div>
